{
    "name": "InputAction",
    "maps": [
        {
            "name": "Player",
            "id": "e4b27413-4e30-4137-99da-a6652cab8913",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bcc41581-ab1f-4d0a-9ed6-65d5f1dc4a71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Switch CameraFPS",
                    "type": "Button",
                    "id": "aff31ded-f7e5-4d73-91e5-a65ac9db574c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch CameraLvL1",
                    "type": "Button",
                    "id": "b794887f-3f71-4484-a6c5-2f731d1585e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch CameraLvL2",
                    "type": "Button",
                    "id": "b47c4d3c-da0d-44e9-9fc6-87e50c93bc83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3a324a4b-f74d-4cdb-8a63-1edd55f5ee0a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "87344848-930b-41af-ae2e-ecf4f5663e28",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "deaba326-b19a-4e19-9188-9f5173bbb678",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f799946c-2b2c-4056-940f-95d2739e5285",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "acb6b7b6-64a3-4a98-8a71-83c2c806e986",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4c6aa172-4704-4e13-bc9a-431970fddefe",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch CameraLvL1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b795aa7-230a-45ff-b04f-4908eb218ba4",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch CameraLvL2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "271f4779-4848-4342-995a-ef9442a32084",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch CameraFPS",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}